Aggiunte immagini e groundbox da sistemare

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 **/obj/**
 **/[Bb]uild/**
 **/[Bb]uilds/**
-**/[Ll]ogs/**
+I Cant See Me/[Ll]ogs/**
 **/[Mm]emoryCaptures/**
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
