--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,11 @@
 **/[Ll]ibrary/**
 **/[Tt]emp/**
 **/[Oo]bj/**
-**/obj/**
 **/[Bb]uild/**
 **/[Bb]uilds/**
 **/[Ll]ogs/**
 **/[Mm]emoryCaptures/**
+**/[Pp]hoton/**
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
