--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 **/[Ll]ogs/**
 **/[Mm]emoryCaptures/**
 **/[Pp]hoton/**
+**/*.meta
+**/*.meta/**
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
