--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,7 @@
 **/[Ll]ogs/**
 **/[Mm]emoryCaptures/**
 **/[Pp]hoton/**
-**/*.meta
-**/*.meta/**
+**/[Pp]hoton*/**
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
